# zink

./: .gitignore  .gitmodules  404.html  CNAME  Cargo.toml  Conta.toml  README.md  RELEASES.md  _typos.toml  benchmarks.html  book.toml  cli.html  contributing.html  crates.js  examples.html  funding.json  help.html  highlight.js  index.html  introduction.html  print.html  search-index.js  searchindex.js  searchindex.json  security.html  settings.html  source-files.js  stability.html  toc.html  toc.js  tutorial.html
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
abi/: Cargo.toml  README.md
abi/src/: codec.rs  lib.rs  result.rs  selector.rs  util.rs
addr2line/: all.html  enum.LookupResult.html  fn.demangle.html  fn.demangle_auto.html  index.html  struct.Context.html  struct.Frame.html  struct.FrameIter.html  struct.FunctionName.html  struct.Location.html  struct.LocationRangeIter.html  struct.SplitDwarfLoad.html  trait.LookupContinuation.html
adler/: all.html  fn.adler32_slice.html  index.html  struct.Adler32.html
ahash/: all.html  index.html  struct.AHasher.html
alloc/: Cargo.toml
anstream/: all.html  enum.ColorChoice.html  fn.stderr.html  fn.stdout.html  index.html  macro.eprint.html  macro.eprintln.html  macro.panic.html  macro.print.html  macro.println.html  struct.AutoStream.html  struct.Buffer.html  struct.StripStream.html  trait.Lockable.html  trait.RawStream.html
anstyle/: all.html  enum.AnsiColor.html  enum.Color.html  index.html  struct.Ansi256Color.html  struct.EffectIter.html  struct.Effects.html  (+3 more)
cli/: Cargo.toml  README.md  elko.html  index.html  zinkc.html
cli/cli/: Cargo.toml  README.md
cli/cli/src/: compile.rs  lib.rs
cli/conta/: Cargo.toml
cli/conta/src/: lib.rs  version.rs
cli/conta/src/cmd/: bump.rs  mod.rs  publish.rs
cli/elko/: Cargo.toml
cli/elko/src/: build.rs  lib.rs  new.rs
cli/elko/src/utils/: mod.rs  wasm.rs
cli/src/: build.rs  compile.rs  lib.rs  new.rs  utils.rs  zinkc.rs
cli/src/utils/: manifest.rs  mod.rs  result.rs  wasm.rs
codegen/: Cargo.toml  README.md
codegen/abi/: Cargo.toml
codegen/abi/src/: executor.rs  lib.rs
codegen/opcodes/: Cargo.toml
codegen/opcodes/src/: lib.rs  shanghai.rs
codegen/src/: abi.rs  asm.rs  backtrace.rs  codegen.rs  constructor.rs  context.rs  control.rs  data.rs  dispatcher.rs  export.rs  frame.rs  func.rs  import.rs  isa.rs  jump.rs  lib.rs  limits.rs  local.rs  masm.rs  parser.rs  result.rs  stack.rs  validator.rs  visitor.rs
codegen/src/asm/: cmp.rs  control.rs  float.rs  integer.rs  memory.rs  mod.rs  signed.rs  stack.rs
codegen/src/code/: func.rs  mod.rs
codegen/src/codegen/: code.rs  constructor.rs  dispatcher.rs  func.rs  function.rs  mod.rs
codegen/src/codegen/code/: mod.rs
codegen/src/jump/: code.rs  mod.rs  pc.rs  relocate.rs  table.rs  target.rs
codegen/src/masm/: cmp.rs  embed.rs  float.rs  integer.rs  memory.rs  mod.rs  ret.rs  stack.rs
codegen/src/visitor/: call.rs  control.rs  handlers.rs  local.rs  log.rs  mod.rs  system.rs
codegen/src/wasm/: abi.rs  data.rs  func.rs  host.rs  ie.rs  mod.rs  section.rs
compiler/: Cargo.toml  README.md  arithmetic.html  calls.html  control-flow.html  index.html  locals.html  recursion.html  storage.html
compiler/filetests/: Cargo.toml  build.rs  lib.rs
compiler/filetests/wat/br_if/: as_block_last.wat  as_if_else.wat
compiler/filetests/wat/i32add/: tee.wat
compiler/filetests/wat/i64add/: params.wat
compiler/filetests/wat/i64sub/: locals.wat
compiler/filetests/wat/log/: log3.wat
compiler/filetests/wat/recursion/: fibonacci.wat
compiler/filetests/wat/stack/: conditional.wat  dispatch.wat
compiler/filetests/wat/storage/: dispatcher.wat  store.wat
compiler/src/: artifact.rs  buffer.rs  cli.rs  compiler.rs  config.rs  func.rs  lib.rs  parser.rs  result.rs  utils.rs  wasm.rs
compiler/tests/: add.rs  br_if.rs  call.rs  fibonacci.rs  filetests.rs  if.rs  log.rs  loop.rs  recursion.rs  select.rs  storage.rs  sub.rs
compiler/tests/common/: macros.rs  mod.rs
compiler/wat/br_if/: as_block_last.wat
compiler/wat/call/: as_if.wat  dummy.wat  params.wat
compiler/wat/i32add/: locals.wat  params.wat
compiler/wat/i32sub/: locals.wat  params.wat
compiler/wat/i64add/: locals.wat  tee.wat
compiler/wat/i64sub/: params.wat
compiler/wat/if/: basic.wat  singular.wat
compiler/wat/log/: log0.wat  log1.wat  log2.wat  log4.wat
compiler/wat/loop/: as_br_if.wat  fibonacci.wat  singular.wat
compiler/wat/recursion/: fibonacci.wat
compiler/wat/select/: params.wat
compiler/wat/storage/: basic.wat  dispatcher.wat  load.wat  store.wat
crates/zint/cli/: Cargo.toml  build.rs
crates/zint/cli/src/: cmd.rs  lib.rs  main.rs
elko/: Cargo.toml
elko/src/: build.rs  new.rs
evm/abi/: Cargo.toml  README.md
evm/abi/src/: abi.rs  arg.rs  input.rs  lib.rs
evm/opcodes/: Cargo.toml
evm/opcodes/src/: cancun.rs  lib.rs  shanghai.rs
tests/: Cargo.toml  add.rs  br_if.rs  call.rs  if.rs  lib.rs  log.rs  loop.rs  recursion.rs  select.rs  stack.rs  storage.rs  sub.rs  transient_storage.rs
utils/conta/: Cargo.toml  README.md
utils/conta/src/: config.rs  lib.rs  sed.rs
utils/conta/src/cmd/: bump.rs  mod.rs  publish.rs
zink/abi/: Cargo.toml
zink/abi-macro/: Cargo.toml
zink/abi-macro/src/: lib.rs
zink/abi/src/: abi.rs  encoding.rs  lib.rs  selector.rs
zink/codegen/: Cargo.toml  README.md
zink/codegen/src/: constructor.rs  contract.rs  event.rs  lib.rs  revert.rs  selector.rs  storage.rs  transient_storage.rs  utils.rs
zint/: Cargo.toml  README.md
zint/cli/: Cargo.toml
zint/cli/src/: lib.rs
zint/cli/storage/.github/workflows/: test.yml
zint/cli/storage/script/: Storage.s.sol
zint/cli/storage/src/: Storage.sol
zint/cli/storage/test/: Storage.t.sol
zint/cli/storage/ztests/: Cargo.toml  storage_test.zink
zint/cli/storage/ztests/src/: main.rs
zint/evm/: index.html  sidebar-items.js  struct.EVM.html
zint/src/: api.rs  bytes.rs  contract.rs  ethers.rs  evm.rs  interp.rs  lib.rs  lookup.rs  result.rs  utils.rs
zint/tests/: addition.rs  storage.rs
(+27614 files in other folders)
