[profile]
dev = { panic = "abort"}
release = { panic = "unwind" }

[workspace]
members = [
  "abi",
  "codegen",
  "compiler",
  "compiler/filetests",
  "elko",
  "evm/opcodes",
  "evm/abi",
  "zink/codegen",
  "zint",
]
resolver = "2"

[workspace.package]
version = "0.1.10"
authors = ["clearloop"]
edition = "2021"
license = "GPL-3.0-only"
homepage = "https://github.com/clearloop/zink"
repository = "https://github.com/clearloop/zink.git"

[workspace.dependencies]
anyhow = "1.0.77"
cargo_metadata = "0.18.1"
ccli = "0.0.1"
colored = "2.1.0"
etc = "0.1.16"
hex = "0.4.3"
indexmap = "2.1.0"
paste = "1.0.14"
postcard = { version = "1.0.8", default-features = false }
proc-macro2 = "1.0.71"
quote = "1.0.33"
revm = { version = "3.5.0", default-features = false }
semver = "1.0.20"
serde = { version = "1.0.193", default-features = false }
serde_json = "1.0.108"
smallvec = "1.11.2"
syn =  { version = "2.0.43", features = [ "full" ] }
thiserror = "1.0.52"
tiny-keccak = "2.0.2"
toml = "0.8.8"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
wasm-opt = "0.116.0"
wasmparser = "0.118.1"
wat = "1.0.82"

## EVM packages
opcodes = { package = "evm-opcodes", path = "evm/opcodes", version = "=0.0.3", features = [ "data" ] }
sol-abi = { path = "evm/abi", version = "=0.0.1" }

## Zink packages
elko = { path = "elko", version = "0.1.10" }
filetests = { package = "zinkc-filetests", path = "compiler/filetests", version = "0.1.10" }
zabi = { path = "abi", version = "0.1.10" }
zingen =  { path = "codegen", version = "0.1.10" }
zink = { path = ".", version = "0.1.10" }
zink-codegen = { path = "zink/codegen", version = "0.1.10" }
zinkc = { path = "compiler", version = "0.1.10" }
zint = { path = "zint", version = "0.1.10" }

[workspace.metadata.conta]
packages = [
  "zabi",
  "zingen",
  "zinkc",
  "filetests",
  "zint",
  "zink-codegen",
  "zink",
  "elko"
]

# Zink Programming Language
# -------------------------

[package]
name = "zink"
description = "Standard library for zink projects."
documentation = "https://docs.rs/zink"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "zink/README.md"

[lib]
path = "zink/src/lib.rs"

[dependencies]
paste.workspace = true
zink-codegen.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
anyhow.workspace = true
filetests.workspace = true
zint.workspace = true
