[profile]
dev = { panic = "abort" }
release = { panic = "unwind" }

[workspace]
members = [
  "codegen",
  "compiler",
  "compiler/filetests",
  "evm/opcodes",
  "evm/abi",
  "zink/abi",
  "zink/codegen",
  "zink/elko",
  "zink/zint", "zink/abi-macro",
]
resolver = "2"

[workspace.package]
version = "0.1.11"
authors = ["clearloop"]
edition = "2021"
license = "GPL-3.0-only"
homepage = "https://github.com/clearloop/zink"
repository = "https://github.com/clearloop/zink.git"

[workspace.dependencies]
anyhow = "1.0.79"
cargo_metadata = "0.18.1"
ccli = "0.0.1"
colored = "2.1.0"
etc = "0.1.19"
heck = "0.5.0"
hex = "0.4.3"
indexmap = "2.2.2"
paste = "1.0.14"
postcard = { version = "1.0.8", default-features = false }
proc-macro2 = "1.0.78"
quote = "1.0.35"
revm = { version = "14", default-features = false }
semver = "1.0.21"
serde = { version = "1.0.196", default-features = false }
serde_json = "1.0.113"
smallvec = "1.13.1"
syn = { version = "2.0.77", features = ["full"] }
thiserror = "1.0.56"
tiny-keccak = { version = "2.0.2", features = [
  "keccak",
], default-features = false }
toml = "0.8.9"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
wasm-opt = "0.116.0"
wasmparser = "0.121.0"
wat = "1.0.85"

## EVM packages
opcodes = { package = "evm-opcodes", path = "evm/opcodes", version = "=0.0.4", features = [
  "data",
] }
sol-abi = { path = "evm/abi", version = "=0.0.1" }

## Zink packages
elko = { path = "elko", version = "0.1.11" }
filetests = { package = "zinkc-filetests", path = "compiler/filetests", version = "0.1.11" }
zabi = { path = "zink/abi", version = "0.1.11" }
zingen = { path = "codegen", version = "0.1.11" }
zink = { path = ".", version = "0.1.11" }
zink-codegen = { path = "zink/codegen", version = "0.1.11" }
zinkc = { path = "compiler", version = "0.1.11" }
zint = { path = "zink/zint", version = "0.1.11" }

[workspace.metadata.conta]
packages = [
  "zabi",
  "zingen",
  "zinkc",
  "filetests",
  "zint",
  "zink-codegen",
  "zink",
  "elko",
]

# Zink Programming Language
# -------------------------

[package]
name = "zink"
description = "Standard library for zink projects."
documentation = "https://docs.rs/zink"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "zink/README.md"

[lib]
path = "zink/src/lib.rs"

[dependencies]
fmt = "0.1.0"
paste.workspace = true
zink-codegen.workspace = true
zink-abi-macro = { path = "zink/abi-macro", optional = true }
zabi = { path = "zink/abi", version = "0.1.11" }
smallvec.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tiny-keccak.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
anyhow.workspace = true
filetests.workspace = true
opcodes = { workspace = true, features = ["data"] }
tracing.workspace = true
zint.workspace = true
hex.workspace = true
serde_json.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
dlmalloc = { version = "0.2", optional = true, features = ["global"] }

[features]
# default = [ "evm" ]
# evm = [  ]
abi-import = ["zink-abi-macro", "zabi/encoding"]
wasm-alloc = ["dep:dlmalloc"]
default = ["wasm-alloc"]
