[package]
name = "zinkup"
description = "Zink toolchain"
documentation = "https://docs.rs/zinkup"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[[bin]]
name = "zinkc"
required-features = [ "zinkc" ]

[[bin]]
name = "elko"
required-features = [ "elko" ]

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = [ "derive" ] }
color-eyre.workspace = true
tracing-subscriber = { workspace = true, features = [ "env-filter" ] }

elko = { workspace = true, optional = true }
zinkc = { workspace = true, optional = true }

[dev-dependencies]
zink.workspace = true

[features]
default = [ "elko", "zinkc" ]
elko = [ "dep:elko" ]
zinkc = [ "dep:zinkc" ]
