[package]
name = "zingen"
description = "Code generation library for zink."
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
indexmap.workspace = true
opcodes.workspace = true
smallvec.workspace = true
thiserror.workspace = true
tracing.workspace = true
wasmparser.workspace = true
paste.workspace = true
