[package]
name = "zingen"
description = "Code generation library for zink."
documentation = "https://docs.rs/zingen"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
smallvec.workspace = true
thiserror.workspace = true
tracing.workspace = true
opcodes.workspace = true
paste.workspace = true
wasmparser.workspace = true
indexmap.workspace = true
