[package]
name = "zingen"
description = "Code generation library for zink."
documentation = "https://docs.rs/zingen"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
indexmap.workspace = true
opcodes.workspace = true
paste.workspace = true
smallvec.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
wasmparser.workspace = true
zabi = { workspace = true, features = ["hex", "selector", "syn"] }
hex.workspace = true
