[package]
name = "zinkc"
description = "The Zink Compiler"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
smallvec.workspace = true
thiserror.workspace = true
tracing.workspace = true
wasmparser.workspace = true
zingen.workspace = true

[dev-dependencies]
hex.workspace = true
wat.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"]}
zint.workspace = true
