[package]
name = "zinkc"
description = "The Zink Compiler"
documentation = "https://docs.rs/zinkc"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
smallvec.workspace = true
thiserror.workspace = true
tracing.workspace = true
wasmparser.workspace = true
zingen.workspace = true
opcodes.workspace = true

[dev-dependencies]
hex.workspace = true
wat.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"]}
zint.workspace = true
