[package]
name = "zinkc"
description = "The Zink Compiler"
documentation = "https://docs.rs/zinkc"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[[bin]]
name = "zinkc"
required-features = [ "cli" ]

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
wasmparser.workspace = true
zabi.workspace = true
zingen.workspace = true

# Optional dependencies
ccli = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
wasm-opt = { workspace = true, optional = true }

[dev-dependencies]
hex.workspace = true
wat.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"]}
paste.workspace = true
zabi.workspace = true
etc.workspace = true

[features]
cli = [ "ccli", "serde_json" ]
utils = [ ]
