[package]
name = "elko"
description = "Zink package manager."
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
ccli.workspace = true
cargo_metadata.workspace = true
colored.workspace = true
etc.workspace = true
semver.workspace = true
serde = { workspace = true, features = [ "derive" ] }
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true
zinkc = { workspace = true, features = [ "cli" ] }
