[package]
name = "zint"
description = "Zink testing utils"
documentation = "https://docs.rs/zint"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
cargo_metadata.workspace = true
etc.workspace = true
ethers = { workspace = true, optional = true }
hex.workspace = true
revm.workspace = true
serde = { workspace = true, features = [ "derive" ] }
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"]}
toml.workspace = true
url.workspace = true
wasm-opt.workspace = true
zabi.workspace = true
zinkc.workspace = true
