[package]
name = "zint"
description = "Zink testing utils"
documentation = "https://docs.rs/zint"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
cargo_metadata.workspace = true
etc.workspace = true
hex.workspace = true
revm = { workspace = true, features = [ "std" ] }
serde = { workspace = true, features = [ "derive" ] }
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"]}
toml.workspace = true
zabi.workspace = true
zinkc =  { workspace = true, features = [ "utils" ] }


