[package]
name = "conta"
description = "Tool for bumping and publishing crates."
documentation = "https://docs.rs/conta"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
cargo_metadata.workspace = true
clap = { workspace = true, features = [ "derive" ] }
crates-io.workspace = true
curl.workspace = true
semver.workspace = true
serde = { workspace = true, features = [ "derive" ] }
toml.workspace = true
