[package]
name = "conta"
description = "Tool for bumping and publishing crates."
documentation = "https://docs.rs/conta"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
ccli.workspace = true
reqwest = { workspace = true, features = [ "blocking", "json", "default-tls" ] }
semver.workspace = true
serde = { workspace = true, features = [ "derive" ] }
toml.workspace = true
toml_edit.workspace = true
