[package]
name = "zabi"
description = "Zink ABI generator"
documentation = "https://docs.rs/zabi"
version = "0.1.4"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
hex.workspace = true
postcard = { workspace = true, default-features = false, features = [ "use-std" ] }
serde = { workspace = true, features = [ "derive" ] }
sha3.workspace = true
thiserror.workspace = true
