[package]
name = "evm-opcodes"
version = "0.0.0"
edition = "2021"
description = "Rust implementation of EVM opcode"
license.workspace = true
documentation = "https://docs.rs/evm-opcode"
homepage = "https://github.com/clearloop/zink/tree/main/opcode"
repository = "https://github.com/clearloop/zink/"

[dependencies]
paste.workspace = true
