[package]
name = "zinkc-filetests"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
path = "lib.rs"

[dev-dependencies]
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"]}
zinkc.workspace = true

[build-dependencies]
anyhow.workspace = true
cargo_metadata.workspace = true
quote.workspace = true
syn.workspace = true
wat.workspace = true
wasm-opt.workspace = true
