[package]
name = "zinkc-filetests"
description = "Filetests for zinkc."
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
path = "lib.rs"

[dependencies]
anyhow.workspace = true

[dev-dependencies]
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"]}
zinkc.workspace = true

[build-dependencies]
anyhow.workspace = true
cargo_metadata.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
wat.workspace = true
zinkc = { workspace = true, features = [ "utils" ] }

[features]
testing = []
