[package]
name = "evm-opcodes"
description = "Rust implementation of EVM opcode"
documentation = "https://docs.rs/evm-opcodes"
version = "0.0.3"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
paste.workspace = true

[features]
data = []
