[package]
name = "zabi"
description = "Zink ABI generator"
documentation = "https://docs.rs/zabi"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sol-abi.workspace = true

# optional features
hex = { workspace = true, optional = true }
postcard = { workspace = true, default-features = false, features = [ "use-std" ], optional = true }
serde = { workspace = true, features = [ "derive" ], optional = true }
syn = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }
tiny-keccak = { workspace = true, optional = true, features = [ "sha3" ] }

# TODO: introduce feature alloc.
[features]
bytes = [ "postcard", "serde" ]
hex = [ "dep:hex", "thiserror", "bytes" ]
selector = [ "tiny-keccak" ]
serde = [ "dep:serde", "sol-abi/serde" ]
syn = [ "dep:syn", "sol-abi/syn" ]
