[package]
name = "zink-codegen"
description = "Code generation for zink APIs."
documentation = "https://docs.rs/zink-codegen"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
heck.workspace = true
hex.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
tiny-keccak.workspace = true
zabi = { workspace = true, features = [ "hex", "syn" ] }
